# PlatformerEngine

./: .gitignore  CMakeLists.txt  README.md
src/: GameObject.cpp  GameObject.h  ObjectEditor.cpp  ObjectEditor.h  ResourceManager.cpp  ResourceManager.h  main.cpp
